# ParK

include/: ParK.hpp  arnoldi.hpp  dinfo.hpp  dmatrix.hpp  dvector.hpp  gmres.hpp  utils.hpp
test/: CMakeLists.txt
test/include/: vec.hpp
test/src/: runtests.cpp  test_arnoldi.cpp  test_dmatrix.cpp  test_dvector.cpp  test_gmres.cpp  test_utils.cpp  test_vec.cpp
